syntax = "proto3";

option csharp_namespace = "GrpcWebDemo";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
  rpc SayHelloTo (HelloRequest) returns (HelloReply);
  rpc SayHelloToMany (HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  string timestamp = 2;
}